# filesvc-rs

./: Cargo.toml  LICENSE.md
examples/: upload.rs
src/: http.rs  lib.rs
