[package]
name = "filesvc-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.3", default-features = false, features = ["rustls-tls"]}
derive_builder = "0.20.0"
thiserror = "1.0.58"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
eyre = "0.6.12"